# webchronicle

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webchronicle.toml
.github/ISSUE_TEMPLATE/: blank_issue.yml  bug_report.yml  feature_request.yml
.github/workflows/: release.yml
src/: assets.rs  builder.rs  cli.rs  config.rs  ledger.rs  lib.rs  main.rs  scraper.rs  server.rs  templates.rs
src/assets/: main.css  overlay.js
src/templates/: 404.html  base.html  index.html
